# people_tracker

./: .cproject  .project  CMakeLists.txt  package.xml
Debug/: makefile
Debug/src/: subdir.mk
include/people_tracker/: Body.h  FollowPeopleFSM.h  HSVHistogram.h  Head.h  InterestPointsScene.h  Legs.h  Pblob.h  PlobPerception.h  PlobTracker.h  Slice.h
launch/: bica.launch  people_tracker.launch
src/: Body.cpp  FollowPeopleFSM.bica  FollowPeopleFSM.cpp  HSVHistogram.cpp  Head.cpp  InterestPointsScene.cpp  Legs.cpp  Pblob.cpp  PeopleFSM.bica  PlobPerception.cpp  PlobTracker.cpp  Slice.cpp  TestInterestPoints.cpp  TestMainPblobPerception.cpp  actueNode.cpp  cobPeopleActionNode.cpp  followpeople_test_node.cpp  people_tracker_node.cpp
